RESOLVED FIXED231001
ImageBitmap with SVG image source does not honor flipY
https://bugs.webkit.org/show_bug.cgi?id=231001
Summary ImageBitmap with SVG image source does not honor flipY
Cameron McCormack (:heycam)
Reported 2021-09-29 17:25:54 PDT
SVGImage::draw needs to honor ImagePaintingOptions::orientation() in the hasPlatformContext() case for ImageBitmap's flipY handling to work.
Attachments
Cameron McCormack (:heycam)
Comment 1 2021-09-29 17:26:52 PDT
This is the cause of one subtest failure in html/canvas/element/manual/imagebitmap/createImageBitmap-flipY.html.
Radar WebKit Bug Importer
Comment 2 2021-10-06 17:26:19 PDT
Sam Sneddon [:gsnedders]
Comment 3 2022-08-08 08:44:37 PDT
With some of the GPU Process changes, this now applies in WK2 too.
Karl Dubost
Comment 4 2025-12-03 01:46:17 PST
EWS
Comment 5 2025-12-08 19:11:53 PST
Committed 304137@main (b0d65d996b31): <https://commits.webkit.org/304137@main> Reviewed commits have been landed. Closing PR #54763 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.