ImageBitmap with SVG image source does not honor flipY https://bugs.webkit.org/show_bug.cgi?id=231001 rdar://83959718

Reviewed by Nikolas Zimmermann.

SVGImage::draw needs to honor ImagePaintingOptions::orientation() in the
hasPlatformContext() case for ImageBitmap's flipY handling to work.

* LayoutTests/imported/w3c/web-platform-tests/html/canvas/element/manual/imagebitmap/createImageBitmap-flipY-expected.txt:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/html/canvas/element/manual/imagebitmap/createImageBitmap-flipY-expected.txt:
* LayoutTests/platform/mac-wk1/imported/w3c/web-platform-tests/html/canvas/element/manual/imagebitmap/createImageBitmap-flipY-expected.txt:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/svg/graphics/SVGImage.cpp:
(WebCore::SVGImage::draw):

Canonical link: https://commits.webkit.org/304137@main